Menu-About-Reviews

--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -1,3 +1,6 @@
+/* import { bootstrapUtils } from 'react-bootstrap/lib/utils';
+
+cont .profile-buttons */
 .profile {
     padding-top: 70px;
     width: 75%;
